syntax = "proto3";
package seiprotocol.seichain.mint;

import "gogoproto/gogo.proto";
import "mint/v1beta1/mint.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/mint/types";

// AddAssetMetadataProposal is a gov Content type for adding a new asset
// to the dex module's asset list.
message UpdateMinterProposal {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.goproto_stringer) = false;

    string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
    string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
    mint.Minter minter = 3 [ (gogoproto.moretags) = "yaml:\"minter\"" ];
}
